change file paths again

--- a/html/about.html
+++ b/html/about.html
@@ -15,26 +15,26 @@
         }
       })();
     </script>
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-regular.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-500.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-600.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-700.woff2">
-    <link rel="preload" as="image" type="image/webp" href="assets/icons/company logo4.webp">
-    <link rel="preload" href="css/critical.css" as="style">
-    <link rel="stylesheet" href="css/critical.css">
-    <link rel="preload" href="css/style.css" as="style">
-    <link rel="stylesheet" href="css/style.css" media="print" onload="this.media='all'">
-    <link rel="preload" href="css/style-pages.css" as="style">
-    <link rel="stylesheet" href="css/style-pages.css">
-    <link rel="preload" href="css/glide.css" as="style">
-    <link rel="stylesheet" href="css/glide.css" media="print" onload="this.media='all'">
-    <link rel="preload" href="css/dark-mode.css" as="style">
-    <link rel="stylesheet" href="css/dark-mode.css">
-    <script type="module" src="js/glide.min.js" defer></script>
-    <script type="module" src="js/script.js" defer></script>
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-regular.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-500.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-600.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-700.woff2">
+    <link rel="preload" as="image" type="image/webp" href="../assets/icons/company logo4.webp">
+    <link rel="preload" href="../css/critical.css" as="style">
+    <link rel="stylesheet" href="../css/critical.css">
+    <link rel="preload" href="../css/style.css" as="style">
+    <link rel="stylesheet" href="../css/style.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="../css/style-pages.css" as="style">
+    <link rel="stylesheet" href="../css/style-pages.css">
+    <link rel="preload" href="../css/glide.css" as="style">
+    <link rel="stylesheet" href="../css/glide.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="../css/dark-mode.css" as="style">
+    <link rel="stylesheet" href="../css/dark-mode.css">
+    <script type="module" src="../js/glide.min.js" defer></script>
+    <script type="module" src="../js/script.js" defer></script>
     <noscript>
-      <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="css/glide.css">
+      <link rel="stylesheet" href="../css/style.css">
+      <link rel="stylesheet" href="../css/glide.css">
     </noscript>
     <title>Algarve WebCraft | Small Business Website Specialist</title>
   </head>
@@ -124,11 +124,11 @@
               <p class="cmp-main-text">Hi, I'm Tayler Batista, the founder and owner of Algarve Webcraft. Originally from South Africa, I have spent much of my adult life between there and Portugal but for the past five years, I’ve been proud to call the beautiful town of Lagos my home. A couple of years ago, I decided to finally pursue my long-standing interest in programming. I began by studying software development but soon discovered a real passion for website development. What started as just an easier way to break into tech, became something more and so I decided to fully pursue it.</p>
               <p class="cmp-main-text cmp-main-text--pg2-s1">It was during this time that I realized how difficult it is for new or small businesses (especially in a small town) to invest thousands of euros upfront for a website. As a result, many business owners are left with only two options - go without a website entirely, or build one themselves using platforms like WordPress or Wix. While these page-builders are more affordable, they lead to generic, poorly performing websites that still require a lot of time and effort to manage as well as having to create it yourself.</p>
               <p class="cmp-main-text cmp-main-text--pg2-s1">So I began thinking about a business designed specifically to help small businesses that can not afford the high upfront costs of a website. Instead of a large one-time fee, owners can pay a small monthly fee while having everything taken care of, from the initial design, to all the updates and maintenance. This means business owners can focus 100% on what they do best while still having a high-quality, fully managed website that helps them grow and attract more customers. With this, Algarve Webcraft came to life!</p>
-            </div> 
+            </div>
             <div class="who-image-block">
               <img src="#" alt="A picture of the cliff landscape of the Algarve.">
               <img src="#" alt="A picture of Tayler Batista, the owner and lead developer of Algarve WebCraft.">
-              <a class="cmp-main-btn cmp-main-btn--light" href="#">Contact Us</a> 
+              <a class="cmp-main-btn cmp-main-btn--light" href="#">Contact Us</a>
             </div>
           </div>
 
