--- a/html/contact.html
+++ b/html/contact.html
@@ -15,22 +15,22 @@
         }
       })();
     </script>
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-regular.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-500.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-600.woff2">
-    <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-700.woff2">
-    <link rel="preload" as="image" type="image/webp" href="assets/icons/company logo4.webp">
-    <link rel="preload" href="css/critical.css" as="style">
-    <link rel="stylesheet" href="css/critical.css">
-    <link rel="preload" href="css/style.css" as="style">
-    <link rel="stylesheet" href="css/style.css" media="print" onload="this.media='all'">
-    <link rel="preload" href="css/style-pages.css" as="style">
-    <link rel="stylesheet" href="css/style-pages.css">
-    <link rel="preload" href="css/dark-mode.css" as="style">
-    <link rel="stylesheet" href="css/dark-mode.css">
-    <script type="module" src="js/script.js" defer></script>
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-regular.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-500.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-600.woff2">
+    <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-700.woff2">
+    <link rel="preload" as="image" type="image/webp" href="../assets/icons/company logo4.webp">
+    <link rel="preload" href="../css/critical.css" as="style">
+    <link rel="stylesheet" href="../css/critical.css">
+    <link rel="preload" href="../css/style.css" as="style">
+    <link rel="stylesheet" href="../css/style.css" media="print" onload="this.media='all'">
+    <link rel="preload" href="../css/style-pages.css" as="style">
+    <link rel="stylesheet" href="../css/style-pages.css">
+    <link rel="preload" href="../css/dark-mode.css" as="style">
+    <link rel="stylesheet" href="../css/dark-mode.css">
+    <script type="module" src="../js/script.js" defer></script>
     <noscript>
-      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="../css/style.css">
     </noscript>
     <title>Algarve WebCraft | Small Business Website Specialist</title>
   </head>
