change images files path

--- a/html/about.html
+++ b/html/about.html
@@ -19,7 +19,7 @@
     <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-500.woff2">
     <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-600.woff2">
     <link rel="preload" as="font" type="font/woff2" crossorigin href="../assets/fonts/oswald-v53-latin-700.woff2">
-    <link rel="preload" as="image" type="image/webp" href="../assets/icons/company logo4.webp">
+    <link rel="preload" as="image" type="image/webp" href="../assets/icons/company-logo4.webp">
     <link rel="preload" href="../css/critical.css" as="style">
     <link rel="stylesheet" href="../css/critical.css">
     <link rel="preload" href="../css/style.css" as="style">
