Many changes as well as adding privacy and terms pages

--- a/html/services.html
+++ b/html/services.html
@@ -40,7 +40,7 @@
 
       <div class="header__container">
         <div class="wrapper wrapper--wide wrapper--header">
-          <img src="/assets/icons/company-logo4.webp" class="company-logo" width="170" height="45" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website designs.)">
+          <img src="../assets/icons/company-logo4.webp" class="company-logo" width="170" height="45" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website designs.)">
 
           <div class="hamburger-btn-box">
             <button id="dark-mode-toggle">
@@ -156,7 +156,7 @@
               <div class="text-block-container__main-text">
                 <span class="cmp-topper-heading cmp-topper-heading--pg3-s2">Our approach</span>
                 <h2 class="cmp-sub-heading cmp-sub-heading--pg3-s2">Professional Web Design for Just €85/Month with <span class="approach-fees-heading-span">no Upfront Fees</span></h2>
-                <p class="cmp-main-text cmp-main-text--pg1-s2 cmp-main-text--pg3-s2">We specialize in building tailor-made websites for small businesses. Clean, fast, and built from the ground up. Our standard plan includes five pages with <strong>no upfront payment required</strong>. Need more than the basics? We will give you a fair, custom quote based on your exact needs.</p>
+                <p class="cmp-main-text cmp-main-text--pg1-s2 cmp-main-text--pg3-s2">We specialize in building tailor-made websites for small businesses. Clean, fast, and built from the ground up. Our standard plan includes five pages with <strong>no upfront payment required</strong>. Need more (or less) than the basics? We will give you a fair, custom quote based on your exact needs.</p>
                 <p class="cmp-main-text cmp-main-text--pg1-s2 cmp-main-text--pg3-s2">The monthly plan comes with a <strong>6-month minimum contract</strong>, and includes everything: custom design, development, hosting, lifetime updates, round-the-clock support, and unlimited small edits. For larger edits or new add-ons, we may charge a small fee depending on the size of the request.</p>
               </div>
 
@@ -410,9 +410,9 @@
             </div>
 
             <div>
-              <a href="#"><strong>Privacy Policy</strong></a>
+              <a href="./privacy.html"><strong>Privacy Policy</strong></a>
               <span>|</span>
-              <a href="#"><strong>Terms of Use</strong></a>
+              <a href="./terms.html"><strong>Terms of Use</strong></a>
             </div>
           </div>
 
