--- a/html/terms.html
+++ b/html/terms.html
@@ -104,29 +104,129 @@
     <main id="main">
 
       <div class="cmp-svg-pages-decoration">
-        <h1 class="cmp-main-heading cmp-main-heading--other-pages">Contact Us</h1>
+        <h1 class="cmp-main-heading cmp-main-heading--other-pages">Terms of use</h1>
         <svg viewBox="0 0 1440 160" class="cmp-svg-pages-decoration__svg">
           <path d="M0,80 C360,160 1080,0 1440,80 L1440,0 L0,0 Z" />
         </svg>
       </div>
 
-      <section class="pg5-s1-contact">
-        <div class="wrapper wrapper--mobile-S">
+      <section id="terms-page">
+        <div class="wrapper wrapper--mobile-L terms-privacy-pages-flex">
+          <p><strong>Last Updated:</strong> July 19, 2025</p>
 
-          <svg class="decorative-side-svg decorative-side-svg--pg5-s1" viewBox="0 0 512 542" aria-hidden="true">
-            <defs>
-              <filter id="svg-drop-shadow" x="-50%" y="-50%" width="200%" height="200%">
-                <feDropShadow dx="10" dy="10" stdDeviation="7" flood-color="#0065ca" flood-opacity="1" />
-              </filter>
-            </defs>
-            <path filter="url(#svg-drop-shadow)" d="M256,512c-68.38,0-132.667-26.628-181.02-74.98S0,324.38,0,256S26.628,123.333,74.98,74.98 S187.62,0,256,0s132.667,26.628,181.02,74.98S512,187.62,512,256s-26.628,132.667-74.98,181.02S324.38,512,256,512z M256,20.398 C126.089,20.398,20.398,126.089,20.398,256S126.089,491.602,256,491.602S491.602,385.911,491.602,256S385.911,20.398,256,20.398z M256,431.426c-96.73,0-175.426-78.696-175.426-175.426S159.27,80.574,256,80.574S431.426,159.27,431.426,256 S352.73,431.426,256,431.426z M256,100.972c-85.483,0-155.028,69.545-155.028,155.028S170.517,411.028,256,411.028 S411.028,341.483,411.028,256S341.483,100.972,256,100.972z"></path>
-          </svg>
+          <nav>
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">Table of Contents</h2>
+            <ul class="cmp-main-text cmp-main-text--terms-privacy-nav__list">
+              <li><a href="#about-us">About Us</a></li>
+              <li><a href="#website-use">Website Use</a></li>
+              <li><a href="#services-agreement">Services and Client Agreements</a></li>
+              <li><a href="#intellectual-property">Intellectual Property</a></li>
+              <li><a href="#hosting">Hosting and Third-Party Services</a></li>
+              <li><a href="#communication">Communication and Contact</a></li>
+              <li><a href="#pricing-payments">Pricing and Payments</a></li>
+              <li><a href="#cancellation">Cancellation and File Ownership</a></li>
+              <li><a href="#warranties">No Warranties</a></li>
+              <li><a href="#liability">Limitation of Liability</a></li>
+              <li><a href="#governing-law">Governing Law</a></li>
+              <li><a href="#changes">Changes to These Terms</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </nav>
 
-          <div class="cards-main-text-container">
-            <span class="cmp-topper-heading">Contact</span>
-            <h2 class="cmp-sub-heading sub-heading--pg1-s1">Reach out to us</h2> 
-            <p class="cmp-main-text main-text--pg5-s1">Get in touch with us by email or send us a message on WhatsApp. Let us know what you are looking for in your new website and what your business goals are. We reply to every message within 24 hours and we would love to chat about how we can bring your ideas to life.<br><br> Speak soon,<br> <span>The Algarve WebCraft Team</span></p>
-          </div> 
+          <div id="about-us" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">1. About Us</h2>
+            <p class="cmp-main-text">This website is owned and operated by <strong>Algarve WebCraft</strong>, a small web development business based in <strong>Lagos, Portugal</strong>. We specialize in creating custom websites for small businesses, with a focus on performance, simplicity, and security.</p>
+          </div>
+
+          <div id="website-use" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">2. Website Use</h2>
+            <p class="cmp-main-text">You agree to use this website lawfully and respectfully. You may not attempt to:</p>
+            <ul class="cmp-main-text terms-privacy-list">
+              <li>Copy, modify, or distribute our content without permission</li>
+              <li>Reverse engineer or exploit any part of the site</li>
+              <li>Use it for illegal, harmful, or misleading purposes</li>
+            </ul>
+            <p class="cmp-main-text">This website is intended for adult use. If you are under 18, please ensure you have permission from a parent or guardian before using our services.</p>
+          </div>
+
+          <div id="services-agreement" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">3. Services and Client Agreements</h2>
+            <p class="cmp-main-text">The information on this site is for general guidance only. If you decide to work with Algarve WebCraft, the final details of services, pricing, timelines, and ownership will be agreed upon in writing via email or invoice. We may update or modify our services at any time without notice. We reserve the right to decline any project at our discretion.</p>
+          </div>
+
+          <div id="intellectual-property" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">4. Intellectual Property</h2>
+            <p class="cmp-main-text">All content on this site—including code, text, images, and branding—is the intellectual property of Algarve WebCraft unless stated otherwise. You may not reuse or reproduce anything without our written consent.</p>
+          </div>
+
+          <div id="hosting" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">5. Hosting and Third-Party Services</h2>
+            <p class="cmp-main-text">This site is hosted by <strong>Netlify</strong>, which may automatically apply technical cookies or log general usage data for hosting and performance. Algarve WebCraft does not access, store, or use this data. We do not use any third-party analytics or trackers. We do not use forms and do not collect personal information through the website.</p>
+          </div>
+
+          <div id="communication" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">6. Communication and Contact</h2>
+            <p class="cmp-main-text">You can contact us via:</p>
+            <ul class="cmp-main-text terms-privacy-list">
+              <li>Email: <a href="mailto:algarvewebcraft@gmail.com">algarvewebcraft@gmail.com</a></li>
+              <li>WhatsApp: link or number provided on the website</li>
+            </ul>
+            <p class="cmp-main-text">We aim to reply to all messages within <strong>24 hours</strong>. No communication takes place directly through the website (e.g., no forms, logins, or comments).</p>
+          </div>
+
+          <div id="pricing-payments" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">7. Pricing and Payments</h2>
+            <p class="cmp-main-text">We offer both one-time payment options and ongoing monthly packages for our services.</p>
+            <ul class="cmp-main-text terms-privacy-list">
+              <li><strong>One-time payments</strong> grant you ownership of your site upon full payment. Hosting can be arranged through us for an additional fee or handled by you independently.</li>
+              <li><strong>Monthly packages</strong> include ongoing hosting, support, updates, and small changes. The monthly rate is locked in for the duration of your ongoing plan. If you cancel and return in the future, current pricing will apply at that time.</li>
+            </ul>
+            <p class="cmp-main-text">Once full payment has been made, ownership terms will be clearly outlined in your client agreement or invoice.</p>
+          </div>
+
+          <div id="cancellation" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">8. Cancellation and File Ownership</h2>
+            <ul class="cmp-main-text terms-privacy-list">
+              <li>If you are on a <strong>monthly package</strong> and cancel, your access to the website files and hosting ends. Files are not transferred unless otherwise agreed in writing.</li>
+              <li>If you paid <strong>once-off</strong>, you may host and manage the files yourself and do as you please with them.</li>
+            </ul>
+            <p class="cmp-main-text">We do not issue refunds for services already rendered or for work that has begun.</p>
+          </div>
+
+          <div id="warranties" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">9. No Warranties</h2>
+            <p class="cmp-main-text">This website is provided “as is.” We make no guarantees that the website will be uninterrupted, secure, or free from errors. While we aim to keep everything current and functional, you use the website at your own risk.</p>
+          </div>
+
+          <div id="liability" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">10. Limitation of Liability</h2>
+            <p class="cmp-main-text">Algarve WebCraft is not responsible for:</p>
+            <ul class="cmp-main-text terms-privacy-list">
+              <li>Any damages from using (or being unable to use) this site</li>
+              <li>Website outages or disruptions</li>
+              <li>Technical issues or browser incompatibilities</li>
+              <li>Loss of data or business due to third-party services</li>
+            </ul>
+          </div>
+
+          <div id="governing-law" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">11. Governing Law</h2>
+            <p class="cmp-main-text">These Terms are governed by the laws of <strong>Portugal</strong>. Any legal disputes will be handled exclusively through the Portuguese legal system.</p>
+          </div>
+
+          <div id="changes" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">12. Changes to These Terms</h2>
+            <p class="cmp-main-text">We may update these Terms of Use from time to time. Changes will be reflected on this page, and the date at the top will be updated accordingly. Continued use of the site after any changes means you accept the revised terms.</p>
+          </div>
+
+          <div id="contact" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">13. Contact</h2>
+            <p class="cmp-main-text">If you have any questions about these terms, please contact us:</p>
+            <ul class="cmp-main-text terms-privacy-list">
+              <li>Email: <a href="mailto:algarvewebcraft@gmail.com">algarvewebcraft@gmail.com</a></li>
+              <li>Location: Lagos, Portugal</li>
+            </ul>
+          </div>
         </div>
       </section>
 
