--- a/html/about.html
+++ b/html/about.html
@@ -44,7 +44,7 @@
 
       <div class="header__container">
         <div class="wrapper wrapper--wide wrapper--header">
-          <img src="/assets/icons/company-logo4.webp" class="company-logo" width="170" height="45" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website designs.)">
+          <img src="../assets/icons/company-logo4.webp" class="company-logo" width="170" height="45" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website designs.)">
 
           <div class="hamburger-btn-box">
             <button id="dark-mode-toggle">
@@ -124,11 +124,21 @@
               <p class="cmp-main-text">Hi, I'm Tayler Batista, the founder and owner of Algarve Webcraft. Originally from South Africa, I have spent much of my adult life between there and Portugal but for the past five years, I’ve been proud to call the beautiful town of Lagos my home. A couple of years ago, I decided to finally pursue my long-standing interest in programming. I began by studying software development but soon discovered a real passion for website development. What started as just an easier way to break into tech, became something more and so I decided to fully pursue it.</p>
               <p class="cmp-main-text cmp-main-text--pg2-s1">It was during this time that I realized how difficult it is for new or small businesses (especially in a small town) to invest thousands of euros upfront for a website. As a result, many business owners are left with only two options - go without a website entirely, or build one themselves using platforms like WordPress or Wix. While these page-builders are more affordable, they lead to generic, poorly performing websites that still require a lot of time and effort to manage as well as having to create it yourself.</p>
               <p class="cmp-main-text cmp-main-text--pg2-s1">So I began thinking about a business designed specifically to help small businesses that can not afford the high upfront costs of a website. Instead of a large one-time fee, owners can pay a small monthly fee while having everything taken care of, from the initial design, to all the updates and maintenance. This means business owners can focus 100% on what they do best while still having a high-quality, fully managed website that helps them grow and attract more customers. With this, Algarve Webcraft came to life!</p>
+              
+              <a class="cmp-main-btn cmp-main-btn--light cmp-main-btn--pg2-s1" href="#">Contact Us</a>
             </div>
             <div class="who-image-block">
-              <img src="#" alt="A picture of the cliff landscape of the Algarve.">
-              <img src="#" alt="A picture of Tayler Batista, the owner and lead developer of Algarve WebCraft.">
-              <a class="cmp-main-btn cmp-main-btn--light" href="#">Contact Us</a>
+              <picture>
+                <source srcset="../assets/images/lagos-cliffs-l.webp" media="(min-width: 768px)" type="image/webp">
+                <source srcset="../assets/images/lagos-cliffs-s.webp" media="(max-width: 767px)" type="image/webp">
+                <img src="../assets/images/lagos-cliffs.jpg" class="who-image-block__first-image" alt="Cliffs on the Algarve coast." width="506px" height="674px" loading="lazy" decoding="async">
+              </picture>
+
+              <picture class="who-image-block__second-image-container">
+                <source srcset="../assets/images/man-l.webp" media="(min-width: 768px)" type="image/webp">
+                <source srcset="../assets/images/man-s.webp" media="(max-width: 767px)" type="image/webp">
+                <img src="../assets/images/man.jpg" class="who-image-block__second-image" alt="A picture of Tayler Batista, the owner and lead developer of Algarve WebCraft.." width="268px" height="404px" loading="lazy" decoding="async">
+              </picture>
             </div>
           </div>
 
@@ -240,9 +250,9 @@
             </div>
 
             <div>
-              <a href="#"><strong>Privacy Policy</strong></a>
+              <a href="./privacy.html"><strong>Privacy Policy</strong></a>
               <span>|</span>
-              <a href="#"><strong>Terms of Use</strong></a>
+              <a href="./terms.html"><strong>Terms of Use</strong></a>
             </div>
           </div>
 
