--- a/html/privacy.html
+++ b/html/privacy.html
@@ -104,29 +104,109 @@
     <main id="main">
 
       <div class="cmp-svg-pages-decoration">
-        <h1 class="cmp-main-heading cmp-main-heading--other-pages">Contact Us</h1>
+        <h1 class="cmp-main-heading cmp-main-heading--other-pages">Privacy Policy</h1>
         <svg viewBox="0 0 1440 160" class="cmp-svg-pages-decoration__svg">
           <path d="M0,80 C360,160 1080,0 1440,80 L1440,0 L0,0 Z" />
         </svg>
       </div>
 
-      <section class="pg5-s1-contact">
-        <div class="wrapper wrapper--mobile-S">
+      <section id="privacy-page">
+        <div class="wrapper wrapper--mobile-L terms-privacy-pages-flex">
+          <p><strong>Last Updated:</strong> July 19, 2025</p>
 
-          <svg class="decorative-side-svg decorative-side-svg--pg5-s1" viewBox="0 0 512 542" aria-hidden="true">
-            <defs>
-              <filter id="svg-drop-shadow" x="-50%" y="-50%" width="200%" height="200%">
-                <feDropShadow dx="10" dy="10" stdDeviation="7" flood-color="#0065ca" flood-opacity="1" />
-              </filter>
-            </defs>
-            <path filter="url(#svg-drop-shadow)" d="M256,512c-68.38,0-132.667-26.628-181.02-74.98S0,324.38,0,256S26.628,123.333,74.98,74.98 S187.62,0,256,0s132.667,26.628,181.02,74.98S512,187.62,512,256s-26.628,132.667-74.98,181.02S324.38,512,256,512z M256,20.398 C126.089,20.398,20.398,126.089,20.398,256S126.089,491.602,256,491.602S491.602,385.911,491.602,256S385.911,20.398,256,20.398z M256,431.426c-96.73,0-175.426-78.696-175.426-175.426S159.27,80.574,256,80.574S431.426,159.27,431.426,256 S352.73,431.426,256,431.426z M256,100.972c-85.483,0-155.028,69.545-155.028,155.028S170.517,411.028,256,411.028 S411.028,341.483,411.028,256S341.483,100.972,256,100.972z"></path>
-          </svg>
+          <nav>
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">Table of Contents</h2>
+            <ul class="cmp-main-text cmp-main-text--terms-privacy-nav__list">
+              <li><a href="#introduction">Introduction</a></li>
+              <li><a href="#collect">What We Collect</a></li>
+              <li><a href="#how-to-contact">How You Can Contact Us</a></li>
+              <li><a href="#hosting">Hosting and Automatic Data</a></li>
+              <li><a href="#cookies">Cookies</a></li>
+              <li><a href="#data">Data Sharing</a></li>
+              <li><a href="#links">External Links</a></li>
+              <li><a href="#children">Children's Privacy</a></li>
+              <li><a href="#rights">Your Rights</a></li>
+              <li><a href="#changes">Changes to This Policy</a></li>
+              <li><a href="#contact">Contact</a></li>
+            </ul>
+          </nav>
 
-          <div class="cards-main-text-container">
-            <span class="cmp-topper-heading">Contact</span>
-            <h2 class="cmp-sub-heading sub-heading--pg1-s1">Reach out to us</h2> 
-            <p class="cmp-main-text main-text--pg5-s1">Get in touch with us by email or send us a message on WhatsApp. Let us know what you are looking for in your new website and what your business goals are. We reply to every message within 24 hours and we would love to chat about how we can bring your ideas to life.<br><br> Speak soon,<br> <span>The Algarve WebCraft Team</span></p>
-          </div> 
+          <div id="introduction" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">1. Introduction</h2>
+            <p class="cmp-main-text">At <strong>Algarve WebCraft</strong>, your privacy matters — even if we don’t collect any personal data directly through this website. This policy outlines what little information may be collected indirectly and how we handle it.</p>
+          </div>
+
+          <div id="collect" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">2. What We Collect</h2>
+            <p class="cmp-main-text">We do not actively collect, store, or process any personal data through this website. There are:</p>
+            <ul class="cmp-main-text terms-privacy-list">
+              <li>No contact forms</li>
+              <li>No user accounts or logins</li>
+              <li>No analytics or tracking tools</li>
+              <li>No advertising scripts or third-party marketing pixels</li>
+            </ul>
+          </div>
+
+          <div id="how-to-contact" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">3. How You Can Contact Us</h2>
+            <p class="cmp-main-text">If you choose to reach out, you can do so via:</p>
+            <ul class="cmp-main-text terms-privacy-list">
+              <li>Email: <a href="mailto:algarvewebcraft@gmail.com">algarvewebcraft@gmail.com</a></li>
+              <li>WhatsApp: Contact link provided on the website</li>
+            </ul>
+            <p class="cmp-main-text">When you contact us, we’ll only use your information (such as your email or phone number) to respond to your inquiry. We don’t store or share these details beyond that purpose.</p>
+          </div>
+
+          <div id="hosting" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">4. Hosting and Automatic Data</h2>
+            <p class="cmp-main-text">This website is hosted on <strong>Netlify</strong>. Netlify may automatically log non-personal information such as:</p>
+            <ul class="cmp-main-text terms-privacy-list">
+              <li>Your IP address</li>
+              <li>Browser type and version</li>
+              <li>Operating system</li>
+              <li>Date and time of visit</li>
+            </ul>
+            <p class="cmp-main-text">This data is handled by Netlify and is used solely for technical performance and security. Algarve WebCraft does not access or analyze these logs.</p>
+          </div>
+
+          <div id="cookies" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">5. Cookies</h2>
+            <p class="cmp-main-text">This site does not use cookies intentionally or for tracking. However, some cookies may be applied automatically by your browser or the hosting provider (Netlify) for technical purposes. We do not use any third-party or advertising cookies.</p>
+          </div>
+
+          <div id="data" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">6. Data Sharing</h2>
+            <p class="cmp-main-text">We do not share, sell, or transfer any information to third parties — simply because we do not collect it in the first place.</p>
+          </div>
+
+          <div id="links" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">7. External Links</h2>
+            <p class="cmp-main-text">This website may contain links to other websites (such as portfolio examples or contact tools). We are not responsible for the content or privacy practices of any external sites you may visit through those links.</p>
+          </div>
+
+          <div id="children" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">8. Children's Privacy</h2>
+            <p class="cmp-main-text">This site is intended for adults and businesses. We do not knowingly collect any data from children under 13 years of age. If you're a parent and believe your child has contacted us, please let us know and we’ll remove any communication immediately.</p>
+          </div>
+
+          <div id="rights" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">9. Your Rights</h2>
+            <p class="cmp-main-text">Under GDPR and other data protection laws, you have the right to request access, correction, or deletion of your personal data. However, since we do not store any personal information, there is typically nothing for us to provide or delete.</p>
+          </div>
+
+          <div id="changes" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">10. Changes to This Policy</h2>
+            <p class="cmp-main-text">We may update this privacy policy if our website or communication practices change. The latest version will always be available on this page with an updated date at the top.</p>
+          </div>
+
+          <div id="contact" class="terms-privacy-section">
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">11. Contact</h2>
+            <p class="cmp-main-text">If you have any questions or concerns about this privacy policy, please get in touch:</p>
+            <ul class="cmp-main-text terms-privacy-list">
+              <li>Email: <a href="mailto:algarvewebcraft@gmail.com">algarvewebcraft@gmail.com</a></li>
+              <li>Location: Lagos, Portugal</li>
+            </ul>
+          </div>
         </div>
       </section>
 
