--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <img src="/assets/icons/company-logo4.webp" class="company-logo" width="170" height="45" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website designs.)">
 
           <div class="hamburger-btn-box">
-            <button id="dark-mode-toggle">
+            <button id="dark-mode-toggle" aria-label="Toggle Dark Mode" aria-pressed="false">
               <svg id="svg-sun" height="32" width="32" viewBox="0 0 512 512">
                 <path style="fill:#BFB61E;" d="M258.373,448.122c-11.783,0-21.337,1.395-21.337,18.136c0,8.131,9.553,45.742,21.337,45.742 c11.784,0,21.336-37.611,21.336-45.742C279.709,449.518,270.156,448.122,258.373,448.122z"></path>
                 <path style="fill:#BFB61E;" d="M352.653,422.86c-10.205,5.891-17.78,11.876-9.41,26.374c4.065,7.041,31.144,34.837,41.349,28.945 c10.205-5.892-0.328-43.241-4.393-50.282C371.829,413.4,362.858,416.968,352.653,422.86z"></path>
@@ -256,7 +256,7 @@
               <div class="text-block-container__main-text">
                 <span class="cmp-topper-heading">Our approach</span>
                 <h2 class="cmp-sub-heading">Professional Web Design for Just €85/Month with <span class="approach-fees-heading-span">no Upfront Fees</span></h2>
-                <p class="cmp-main-text cmp-main-text--pg1-s2">We specialize in building tailor-made websites for small businesses. Clean, fast, and built from the ground up. Our standard plan includes five pages with <strong>no upfront payment required</strong>. Need more than the basics? We will give you a fair, custom quote based on your exact needs.</p>
+                <p class="cmp-main-text cmp-main-text--pg1-s2">We specialize in building tailor-made websites for small businesses. Clean, fast, and built from the ground up. Our standard plan includes five pages with <strong>no upfront payment required</strong>. Need more (or less) than the basics? We will give you a fair, custom quote based on your exact needs.</p>
                 <p class="cmp-main-text cmp-main-text--pg1-s2">The monthly plan comes with a <strong>6-month minimum contract</strong>, and includes everything: custom design, development, hosting, lifetime updates, round-the-clock support, and unlimited small edits. For larger edits or new add-ons, we may charge a small fee depending on the size of the request.</p>
               </div>
 
@@ -651,9 +651,9 @@
             </div>
 
             <div>
-              <a href="#"><strong>Privacy Policy</strong></a>
+              <a href="html/privacy.html"><strong>Privacy Policy</strong></a>
               <span>|</span>
-              <a href="#"><strong>Terms of Use</strong></a>
+              <a href="html/terms.html"><strong>Terms of Use</strong></a>
             </div>
           </div>
 
