--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-500.woff2">
     <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-600.woff2">
     <link rel="preload" as="font" type="font/woff2" crossorigin href="assets/fonts/oswald-v53-latin-700.woff2">
-    <link rel="preload" as="image" type="image/webp" href="assets/icons/company-logo4.webp">
+    <link rel="preload" as="image" type="image/webp" href="assets/logos/company-logo4.webp">
     <link rel="preload" href="css/critical.css" as="style">
     <link rel="stylesheet" href="css/critical.css">
     <link rel="preload" href="css/style.css" as="style">
@@ -42,7 +42,7 @@
 
       <div class="header__container">
         <div class="wrapper wrapper--wide wrapper--header">
-          <img src="/assets/icons/company-logo4.webp" class="company-logo" width="170" height="45" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website designs.)">
+          <img src="assets/logos/company-logo4.webp" class="company-logo" width="170" height="45" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website designs.)">
 
           <div class="hamburger-btn-box">
             <button id="dark-mode-toggle" aria-label="Toggle Dark Mode" aria-pressed="false">
@@ -326,12 +326,13 @@
 
             <div class="owner-image-box">
               <picture>
-                <source>
-                <img src="" alt="A smiling man.">
+                <source srcset="../assets/images/man-l.webp" media="(min-width: 768px)" type="image/webp">
+                <source srcset="../assets/images/man-s.webp" media="(max-width: 767px)" type="image/webp">
+                <img src="../assets/images/man.jpg" alt="Tayler Batista, the owner of Algarve Webcraft" width="506px" height="674px" loading="lazy" decoding="async">
               </picture>
 
               <div class="owner-image-box__text-box">
-                <span>Tayler Batista</span>
+                <span><strong>Tayler Batista</strong></span>
                 <span>Owner and Lead Developer</span>
               </div>
             </div>
@@ -607,7 +608,7 @@
 
           <div class="footer-flex-container">
             <div class="footer__image-text-block">
-              <img src="/assets/icons/company logo3.webP" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
+              <img src="/assets/logos/company-logo4.webp" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
               <a class="cmp-main-btn-footer" href="#">Get Started Today</a>
             </div>
