multiple changes and path edits

--- a/html/about.html
+++ b/html/about.html
@@ -155,9 +155,9 @@
           <div class="banner">
             <div class="banner-overlay"></div>
             <div class="slider" style="--quantity: 3">
-              <div class="item" style="--position: 1"><a href="#"><img src="/assets/icons/company logo3.webp" alt="Website 1" decoding="async" loading="lazy"></a></div>
-              <div class="item" style="--position: 2"><a href="#"><img src="/assets/icons/company logo3.webp" alt="Website 2" decoding="async" loading="lazy"></a></div>
-              <div class="item" style="--position: 3"><a href="#"><img src="/assets/icons/company logo3.webp" alt="Website 3" decoding="async" loading="lazy"></a></div>
+              <div class="item" style="--position: 1"><a href="#"><img src="../assets/logos/company-logo4.webp" alt="Website 1" decoding="async" loading="lazy"></a></div>
+              <div class="item" style="--position: 2"><a href="#"><img src="../assets/logos/company-logo4.webp" alt="Website 2" decoding="async" loading="lazy"></a></div>
+              <div class="item" style="--position: 3"><a href="#"><img src="../assets/logos/company-logo4.webp" alt="Website 3" decoding="async" loading="lazy"></a></div>
             </div>
           </div>
 
@@ -206,7 +206,7 @@
 
           <div class="footer-flex-container">
             <div class="footer__image-text-block">
-              <img src="/assets/logos/company-logo4.webp" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
+              <img src="../assets/logos/company-logo4.webp" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
               <a class="cmp-main-btn-footer" href="#">Get Started Today</a>
             </div>
