--- a/html/privacy.html
+++ b/html/privacy.html
@@ -219,7 +219,7 @@
 
           <div class="footer-flex-container">
             <div class="footer__image-text-block">
-              <img src="/assets/logos/company-logo4.webp" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
+              <img src="../assets/logos/company-logo4.webp" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
               <a class="cmp-main-btn-footer" href="#">Get Started Today</a>
             </div>
