--- a/html/services.html
+++ b/html/services.html
@@ -227,10 +227,10 @@
             <div class="owner-image-box">
               <picture>
                 <source>
-                <img src="" alt="A smiling man.">
+                <img src="../assets/images/man.jpg" alt="A smiling man.">
               </picture>
 
-              <div class="owner-image-box__text-box">
+              <div class="owner-image-box__text-box owner-image-box__text-box--pg2-s1">
                 <span>Tayler Batista</span>
                 <span>Owner and Lead Developer</span>
               </div>
@@ -366,7 +366,7 @@
 
           <div class="footer-flex-container">
             <div class="footer__image-text-block">
-              <img src="/assets/logos/company-logo4.webp" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
+              <img src="../assets/logos/company-logo4.webp" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
               <a class="cmp-main-btn-footer" href="#">Get Started Today</a>
             </div>
