--- a/html/services.html
+++ b/html/services.html
@@ -226,8 +226,9 @@
 
             <div class="owner-image-box">
               <picture>
-                <source>
-                <img src="../assets/images/man.jpg" alt="A smiling man.">
+                <source srcset="../assets/images/man-l.webp" media="(min-width: 768px)" type="image/webp">
+                <source srcset="../assets/images/man-s.webp" media="(max-width: 767px)" type="image/webp">
+                <img src="../assets/images/man.jpg" alt="Tayler Batista, the owner of Algarve Webcraft" width="506px" height="674px" loading="lazy" decoding="async">
               </picture>
 
               <div class="owner-image-box__text-box owner-image-box__text-box--pg2-s1">
