deleting some things temporarily to get 100 page score

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
       <div class="header__container">
         <div class="wrapper wrapper--wide wrapper--header">
-          <img src="assets/logos/company-logo4.webp" class="company-logo" width="170" height="45" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website designs.)">
+          <img src="assets/logos/company-logo4.webp" class="company-logo" width="600" height="160" fetchpriority="high" decoding="async" loading="eager" alt="Algarve Webcraft's logo. Landscape scenary of beach-side cliffs on the left, with the business name on the right (Algarve Webcraft) and its slogan below it (Small business website designs.)">
 
           <div class="hamburger-btn-box">
             <button id="dark-mode-toggle" aria-label="Toggle Dark Mode" aria-pressed="false">
@@ -408,7 +408,7 @@
         </div>
       </section>
 
-      <section class="pg1-s5-pricing">
+      <!-- <section class="pg1-s5-pricing">
         <div class="wrapper wrapper--mobile-L">
           <span class="cmp-topper-heading cmp-topper-heading--pg1-s5">Our Pricing</span>
           <h2 class="cmp-sub-heading cmp-sub-heading--pg1-s5">Affordable Packages for Any Business</h2>
@@ -561,7 +561,7 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <section class="pg1-s6-testimonials">
         <div class="wrapper">
@@ -582,10 +582,10 @@
             <p id="carousel-instructions" class="visually-hidden">Select the next review by either clicking and dragging, using the arrow keys or using the tab key and pressing enter.</p>
             <div class="glide__track" data-glide-el="track" aria-live="polite">
               <ul class="glide__slides">
-                <li class="glide__slide" id="review1" aria-labelledby="tab1" aria-hidden="false">"This is asss ssss sssssss ss ssssss sssss sssss sssssss sss sssss ss syu first review of the business." <span>- Kevin Lortan, The Garden Bar and Grill</span></li>
+                <!-- <li class="glide__slide" id="review1" aria-labelledby="tab1" aria-hidden="false">"This is asss ssss sssssss ss ssssss sssss sssss sssssss sss sssss ss syu first review of the business." <span>- Kevin Lortan, The Garden Bar and Grill</span></li>
                 <li class="glide__slide" id="review2" aria-labelledby="tab2" aria-hidden="true">"Another review of the company."</li>
                 <li class="glide__slide" id="review3" aria-labelledby="tab3" aria-hidden="true">"Third instance of a review for the business."</li>
-                <li class="glide__slide" id="review4" aria-labelledby="tab4" aria-hidden="true">"The final testimonial that someone will see."</li>
+                <li class="glide__slide" id="review4" aria-labelledby="tab4" aria-hidden="true">"The final testimonial that someone will see."</li> -->
               </ul>
               <div class="glide__bullets" data-glide-el="controls[nav]" role="tablist" aria-label="Reviews navigation">
                 <button class="glide__bullet" data-glide-dir="=0" role="tab" aria-controls="review1" id="tab1" aria-selected="true"><span class="visually-hidden">Go to review 1</span></button>
@@ -608,7 +608,7 @@
 
           <div class="footer-flex-container">
             <div class="footer__image-text-block">
-              <img src="assets/logos/company-logo4.webp" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
+              <img src="assets/logos/company-logo4.webp" alt="Business Logo" decoding="async" loading="lazy" height="160" width="600" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
               <a class="cmp-main-btn-footer" href="#">Get Started Today</a>
             </div>
