--- a/index.html
+++ b/index.html
@@ -578,14 +578,14 @@
             <path filter="url(#svg-drop-shadow)" d="M256,512c-68.38,0-132.667-26.628-181.02-74.98S0,324.38,0,256S26.628,123.333,74.98,74.98 S187.62,0,256,0s132.667,26.628,181.02,74.98S512,187.62,512,256s-26.628,132.667-74.98,181.02S324.38,512,256,512z M256,20.398 C126.089,20.398,20.398,126.089,20.398,256S126.089,491.602,256,491.602S491.602,385.911,491.602,256S385.911,20.398,256,20.398z M256,431.426c-96.73,0-175.426-78.696-175.426-175.426S159.27,80.574,256,80.574S431.426,159.27,431.426,256 S352.73,431.426,256,431.426z M256,100.972c-85.483,0-155.028,69.545-155.028,155.028S170.517,411.028,256,411.028 S411.028,341.483,411.028,256S341.483,100.972,256,100.972z"></path>
           </svg>
 
-          <div class="glide" aria-roledescription="carousel" aria-describedby="carousel-instructions">
+          <!-- <div class="glide" aria-roledescription="carousel" aria-describedby="carousel-instructions">
             <p id="carousel-instructions" class="visually-hidden">Select the next review by either clicking and dragging, using the arrow keys or using the tab key and pressing enter.</p>
             <div class="glide__track" data-glide-el="track" aria-live="polite">
               <ul class="glide__slides">
-                <!-- <li class="glide__slide" id="review1" aria-labelledby="tab1" aria-hidden="false">"This is asss ssss sssssss ss ssssss sssss sssss sssssss sss sssss ss syu first review of the business." <span>- Kevin Lortan, The Garden Bar and Grill</span></li>
+                <li class="glide__slide" id="review1" aria-labelledby="tab1" aria-hidden="false">"This is asss ssss sssssss ss ssssss sssss sssss sssssss sss sssss ss syu first review of the business." <span>- Kevin Lortan, The Garden Bar and Grill</span></li>
                 <li class="glide__slide" id="review2" aria-labelledby="tab2" aria-hidden="true">"Another review of the company."</li>
                 <li class="glide__slide" id="review3" aria-labelledby="tab3" aria-hidden="true">"Third instance of a review for the business."</li>
-                <li class="glide__slide" id="review4" aria-labelledby="tab4" aria-hidden="true">"The final testimonial that someone will see."</li> -->
+                <li class="glide__slide" id="review4" aria-labelledby="tab4" aria-hidden="true">"The final testimonial that someone will see."</li>
               </ul>
               <div class="glide__bullets" data-glide-el="controls[nav]" role="tablist" aria-label="Reviews navigation">
                 <button class="glide__bullet" data-glide-dir="=0" role="tab" aria-controls="review1" id="tab1" aria-selected="true"><span class="visually-hidden">Go to review 1</span></button>
@@ -594,7 +594,7 @@
                 <button class="glide__bullet" data-glide-dir="=3" role="tab" aria-controls="review4" id="tab4" aria-selected="false"><span class="visually-hidden">Go to review 4</span></button>
               </div>
             </div>
-          </div>
+          </div> -->
 
         </div>
       </section>
@@ -607,11 +607,11 @@
         <div class="wrapper wrapper--mobile-S">
 
           <div class="footer-flex-container">
-            <div class="footer__image-text-block">
+            <!-- <div class="footer__image-text-block">
               <img src="assets/logos/company-logo4.webp" alt="Business Logo" decoding="async" loading="lazy" height="160" width="600" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
               <a class="cmp-main-btn-footer" href="#">Get Started Today</a>
-            </div>
+            </div> -->
 
             <div class="footer__quick-links-block">
               <h3>Links</h3>
