A bunch of changes and imporvements

--- a/html/terms.html
+++ b/html/terms.html
@@ -110,12 +110,12 @@
         </svg>
       </div>
 
-      <section id="terms-page">
+      <section id="terms-page" aria-labelledby="terms-heading">
         <div class="wrapper wrapper--mobile-L terms-privacy-pages-flex">
           <p><strong>Last Updated:</strong> July 19, 2025</p>
 
           <nav>
-            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">Table of Contents</h2>
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy" id="terms-heading">Table of Contents</h2>
             <ul class="cmp-main-text cmp-main-text--terms-privacy-nav__list">
               <li><a href="#about-us">About Us</a></li>
               <li><a href="#website-use">Website Use</a></li>
