--- a/html/about.html
+++ b/html/about.html
@@ -114,13 +114,13 @@
         </svg>
       </div>
 
-      <section class="pg2-s1-who">
+      <section class="pg2-s1-who" aria-labelledby="s1-who">
         <div class="wrapper wrapper--mobile-L">
 
           <div class="who-text-image-flex">
             <div class="who-text-block">
               <span class="cmp-topper-heading">Algarve Webcraft</span>
-              <h2 class="cmp-sub-heading">A small website business from a small coastal town</h2>
+              <h2 class="cmp-sub-heading" id="s1-who">A small website business from a small coastal town</h2>
               <p class="cmp-main-text">Hi, I'm Tayler Batista, the founder and owner of Algarve Webcraft. Originally from South Africa, I have spent much of my adult life between there and Portugal but for the past five years, I’ve been proud to call the beautiful town of Lagos my home. A couple of years ago, I decided to finally pursue my long-standing interest in programming. I began by studying software development but soon discovered a real passion for website development. What started as just an easier way to break into tech, became something more and so I decided to fully pursue it.</p>
               <p class="cmp-main-text cmp-main-text--pg2-s1">It was during this time that I realized how difficult it is for new or small businesses (especially in a small town) to invest thousands of euros upfront for a website. As a result, many business owners are left with only two options - go without a website entirely, or build one themselves using platforms like WordPress or Wix. While these page-builders are more affordable, they lead to generic, poorly performing websites that still require a lot of time and effort to manage as well as having to create it yourself.</p>
               <p class="cmp-main-text cmp-main-text--pg2-s1">So I began thinking about a business designed specifically to help small businesses that can not afford the high upfront costs of a website. Instead of a large one-time fee, owners can pay a small monthly fee while having everything taken care of, from the initial design, to all the updates and maintenance. This means business owners can focus 100% on what they do best while still having a high-quality, fully managed website that helps them grow and attract more customers. With this, Algarve Webcraft came to life!</p>
@@ -145,11 +145,11 @@
         </div>
       </section>
 
-      <section class="pg1-s4-portfolio pg1-s4-portfolio--pg2-s1">
+      <section class="pg1-s4-portfolio pg1-s4-portfolio--pg2-s1" aria-labelledby="s2-portfolio">
         <div class="wrapper wrapper--mobile-L">
 
           <span class="cmp-topper-heading">Our Portfolio</span>
-          <h2 class="cmp-sub-heading">Showcasing our previous work</h2>
+          <h2 class="cmp-sub-heading" id="s2-portfolio">Showcasing our previous work</h2>
           <p class="cmp-main-text">Every project we take on is crafted with care, strategy, and a focus on long-term results. While we are still a growing business ourselves, we've had the opportunity to work with a few clients across Portugal, and our portfolio is steadily expanding. Here is a look at a few of our recent websites, each tailored to meet the unique needs of the businesses we serve.</p>
 
           <div class="banner">
@@ -164,10 +164,10 @@
         </div>
       </section>
 
-      <section class="pg1-s6-testimonials pg1-s6-testimonials--pg2-s3">
+      <section class="pg1-s6-testimonials pg1-s6-testimonials--pg2-s3" aria-labelledby="s3-testimonials">
         <div class="wrapper">
           <span class="cmp-topper-heading cmp-topper-heading--pg2-s3">Our Testimonials</span>
-          <h2 class="cmp-sub-heading cmp-sub-heading--pg1-s6">Serving Small Businesses Across the Continent</h2>
+          <h2 class="cmp-sub-heading cmp-sub-heading--pg1-s6" id="s3-testimonials">Serving Small Businesses Across the Continent</h2>
           <p class="cmp-main-text cmp-main-text--pg1-s6">We are passionate about helping small business owners bring their vision to life online. When you work with Algarve WebCraft, you are not hiring an agency, you are gaining a dedicated partner who cares about your success. Here is what a few of our clients have shared about working with us.</p>
 
           <svg class="decorative-side-svg decorative-side-svg--testimonials" viewBox="0 0 512 512" aria-hidden="true">
