--- a/html/privacy.html
+++ b/html/privacy.html
@@ -110,12 +110,12 @@
         </svg>
       </div>
 
-      <section id="privacy-page">
+      <section id="privacy-page" aria-labelledby="privacy-heading">
         <div class="wrapper wrapper--mobile-L terms-privacy-pages-flex">
           <p><strong>Last Updated:</strong> July 19, 2025</p>
 
           <nav>
-            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy">Table of Contents</h2>
+            <h2 class="cmp-sub-heading cmp-sub-heading--terms-privacy" id="privacy-heading">Table of Contents</h2>
             <ul class="cmp-main-text cmp-main-text--terms-privacy-nav__list">
               <li><a href="#introduction">Introduction</a></li>
               <li><a href="#collect">What We Collect</a></li>
