bunch of final changes across all pages such as creating buttons links

--- a/html/about.html
+++ b/html/about.html
@@ -107,6 +107,10 @@
 
     <main id="main">
 
+      <!------------------------------------------------------------------------------------------------------------>
+      <!--------------------------------------- PAGE 2 / SECTION-ONE / WHO ----------------------------------------->
+      <!------------------------------------------------------------------------------------------------------------>
+
       <div class="cmp-svg-pages-decoration">
         <h1 class="cmp-main-heading cmp-main-heading--other-pages">About us</h1>
         <svg viewBox="0 0 1440 160" class="cmp-svg-pages-decoration__svg">
@@ -125,7 +129,7 @@
               <p class="cmp-main-text cmp-main-text--pg2-s1">It was during this time that I realized how difficult it is for new or small businesses (especially in a small town) to invest thousands of euros upfront for a website. As a result, many business owners are left with only two options - go without a website entirely, or build one themselves using platforms like WordPress or Wix. While these page-builders are more affordable, they lead to generic, poorly performing websites that still require a lot of time and effort to manage as well as having to create it yourself.</p>
               <p class="cmp-main-text cmp-main-text--pg2-s1">So I began thinking about a business designed specifically to help small businesses that can not afford the high upfront costs of a website. Instead of a large one-time fee, owners can pay a small monthly fee while having everything taken care of, from the initial design, to all the updates and maintenance. This means business owners can focus 100% on what they do best while still having a high-quality, fully managed website that helps them grow and attract more customers. With this, Algarve Webcraft came to life!</p>
               
-              <a class="cmp-main-btn cmp-main-btn--light cmp-main-btn--pg2-s1" href="#">Contact Us</a>
+              <a class="cmp-main-btn cmp-main-btn--light cmp-main-btn--pg2-s1" href="./contact.html">Contact Us</a>
             </div>
             <div class="who-image-block">
               <picture>
@@ -145,7 +149,11 @@
         </div>
       </section>
 
-      <section class="pg1-s4-portfolio pg1-s4-portfolio--pg2-s1" aria-labelledby="s2-portfolio">
+      <!------------------------------------------------------------------------------------------------------------>
+      <!--------------------------------------- PAGE 2 / SECTION-TWO / PORTFOLIO ----------------------------------->
+      <!------------------------------------------------------------------------------------------------------------>
+
+      <section class="pg1-s4-portfolio" aria-labelledby="s2-portfolio">
         <div class="wrapper wrapper--mobile-L">
 
           <span class="cmp-topper-heading">Our Portfolio</span>
@@ -164,6 +172,10 @@
         </div>
       </section>
 
+      <!------------------------------------------------------------------------------------------------------------>
+      <!--------------------------------------- PAGE 2 / SECTION-THREE / TESTIMONIALS ------------------------------>
+      <!------------------------------------------------------------------------------------------------------------>
+
       <section class="pg1-s6-testimonials pg1-s6-testimonials--pg2-s3" aria-labelledby="s3-testimonials">
         <div class="wrapper">
           <span class="cmp-topper-heading cmp-topper-heading--pg2-s3">Our Testimonials</span>
@@ -180,10 +192,10 @@
             <p id="carousel-instructions" class="visually-hidden">Select the next review by either clicking and dragging, using the arrow keys or using the tab key and pressing enter.</p>
             <div class="glide__track" data-glide-el="track" aria-live="polite">
               <ul class="glide__slides">
-                <li class="glide__slide" id="review1" aria-labelledby="tab1" aria-hidden="false">"This is asss ssss sssssss ss ssssss sssss sssss sssssss sss sssss ss syu first review of the business." <span>- Kevin Lortan, The Garden Bar and Grill</span></li>
-                <li class="glide__slide" id="review2" aria-labelledby="tab2" aria-hidden="true">"Another review of the company."</li>
-                <li class="glide__slide" id="review3" aria-labelledby="tab3" aria-hidden="true">"Third instance of a review for the business."</li>
-                <li class="glide__slide" id="review4" aria-labelledby="tab4" aria-hidden="true">"The final testimonial that someone will see."</li>
+                <li class="glide__slide" id="review1" aria-labelledby="tab1" aria-hidden="false">"Algarve WebCraft built us a beautiful website that loads fast and works well for our restaurant. The whole process was smooth and stress-free from start to finish."<span>- Kevin Lortan, The Garden Bar and Grill</span></li>
+                <li class="glide__slide" id="review2" aria-labelledby="tab2" aria-hidden="true">"Great service, clear communication, and a template site that looks exactly how we imagined. It’s obvious they care about the work they do."<span>- Michael Hudson, Hudson Designer Profile</span></li>
+                <li class="glide__slide" id="review3" aria-labelledby="tab3" aria-hidden="true">"I needed a basic site for my mushroom picking guide, and Algarve WebCraft delivered exactly that. It’s fast, easy to navigate, and looks great!"<span>- Kevin Powell, Mushroom Guide</span></li>
+                <li class="glide__slide" id="review4" aria-labelledby="tab4" aria-hidden="true">"Super happy with the result! Algarve WebCraft made everything simple, and the site works really well. Its fast and exactly what we needed."<span>- John James, The Odeon</span></li>
               </ul>
               <div class="glide__bullets" data-glide-el="controls[nav]" role="tablist" aria-label="Reviews navigation">
                 <button class="glide__bullet" data-glide-dir="=0" role="tab" aria-controls="review1" id="tab1" aria-selected="true"><span class="visually-hidden">Go to review 1</span></button>
@@ -208,16 +220,16 @@
             <div class="footer__image-text-block">
               <img src="../assets/logos/company-logo4.webp" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
-              <a class="cmp-main-btn-footer" href="#">Get Started Today</a>
+              <a class="cmp-main-btn-footer" href="./contact.html">Get Started Now</a>
             </div>
 
             <div class="footer__quick-links-block">
               <h3>Links</h3>
               <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Web Design</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./about.html">Who We Are</a></li> 
+                <li><a href="./services.html">What We Offer</a></li>
+                <li><a href="./pricing.html">Our Prices</a></li>
               </ul>
             </div>
 
