--- a/html/pricing.html
+++ b/html/pricing.html
@@ -195,7 +195,7 @@
 
               <span class="pricing-card__main-price-span">€1200</span>
               <span>+€15/mo Hosting</span>
-              <a class="cmp-main-btn" href="#">Get Started</a>
+              <a class="cmp-main-btn" href="./contact.html">Start Now</a>
             </div>
 
             <div class="pricing-card">
@@ -268,7 +268,7 @@
 
               <span class="pricing-card__main-price-span">€85</span>
               <span class="pricing-card__secondary-price-span">Per Month</span>
-              <a class="cmp-main-btn cmp-main-btn--light" href="#">Get Started</a>
+              <a class="cmp-main-btn cmp-main-btn--light" href="./contact.html">Start Now</a>
             </div>
           </div>
         </div>
@@ -285,16 +285,16 @@
             <div class="footer__image-text-block">
               <img src="../assets/logos/company-logo4.webp" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
-              <a class="cmp-main-btn-footer" href="#">Get Started Today</a>
+              <a class="cmp-main-btn-footer" href="./contact.html">Get Started Now</a>
             </div>
 
             <div class="footer__quick-links-block">
               <h3>Links</h3>
               <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Web Design</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./about.html">Who We Are</a></li> 
+                <li><a href="./services.html">What We Offer</a></li>
+                <li><a href="./pricing.html">Our Prices</a></li>
               </ul>
             </div>
 
