--- a/html/services.html
+++ b/html/services.html
@@ -103,6 +103,10 @@
 
     <main id="main">
 
+      <!------------------------------------------------------------------------------------------------------------>
+      <!--------------------------------------- PAGE 3 / SECTION-ONE / SERVICES ------------------------------------>
+      <!------------------------------------------------------------------------------------------------------------>
+
       <div class="cmp-svg-pages-decoration">
         <h1 class="cmp-main-heading cmp-main-heading--other-pages">Our Services</h1>
         <svg viewBox="0 0 1440 160" class="cmp-svg-pages-decoration__svg">
@@ -127,7 +131,7 @@
                 <li><strong>🔐 Stronger Security</strong><br>
                   Without platforms like WordPress or third-party plugins, there are no entry points for hackers. Our websites do not rely on databases or backend systems vulnerable to attacks, only static HTML, CSS and Javascript. That means no risk of your website ever being hacked.</li>
                 <li><strong>♿ Built with Accessibility in Mind</strong><br>
-                  Because we hand-code every website, we are able to follow accessibility best practices from the start. That means clean and semantic code, screen-reader navigation, keyboard navigation, dark color scheme and clear contrast choices. All of this makes your site more usable for everyone, regardless of their ability.</li> 
+                  Because we hand-code every website, we are able to follow accessibility best practices from the start. That means clean and semantic code, screen-reader navigation, keyboard navigation, dark color scheme and clear contrast choices. All of this makes your site more usable for everyone, regardless of their ability.</li>
                 <li><strong>📈 Better SEO & Rankings</strong><br>
                   Google loves fast, well-built websites. When your site scores high on Google’s Core Web Vitals and PageSpeed Insights, it’s more likely to rank higher in search results. A faster, more stable site also means users stay longer and engage more with the site, all key signals Google looks for.</li>
                 <li><strong>🗺️ Boosts Your Local Presence</strong><br>
@@ -150,13 +154,51 @@
               <p class="cmp-main-text">And because we handle everything from design and development to ongoing upkeep and maintenance, you can focus on what matters the most: running your business.</p>
             </div>
 
-            <div class="services-box__image">
-              <img src="" alt="A random image for the services section">
+            <div class="services-box__svg" aria-hidden="true">
+              <svg viewBox="0 0 64 64" aria-hidden="true">
+                <g fill="#ff9d27">
+                  <path d="M10.9 48.7c4-4 4.4-5 6.9-2.5s1.5 2.8-2.5 6.9c-3 3-6.8 2.4-6.8 2.4s-.6-3.8 2.4-6.8"></path>
+                  <path d="M18.5 52.8c1.6-4.2 2.1-4.7-.2-6c-2.3-1.3-2.3-.4-3.8 3.8c-1.2 3.1.2 5.9.2 5.9s2.7-.5 3.8-3.7"> </path>
+                </g>
+                <path d="M16.2 48.9c.9-2.3.9-2.8 2.1-2.1c1.3.7 1 1 .1 3.3c-.6 1.7-2.1 2.1-2.1 2.1s-.7-1.5-.1-3.3" fill="#fdf516"> </path>
+                <path d="M17.1 45.7c-1.3-2.3-1.8-1.8-6-.2c-3.1 1.2-3.7 3.8-3.7 3.8s2.8 1.4 5.9.2c4.2-1.6 5.1-1.6 3.8-3.8" fill="#ff9d27"> </path>
+                <g fill="#fdf516">
+                  <path d="M15 47.8c2.3-.9 2.8-.9 2.1-2.1c-.7-1.3-1-1-3.3-.1c-1.7.6-2.1 2.1-2.1 2.1s1.6.7 3.3.1"> </path>
+                  <path d="M13.9 47.6c2.2-2.2 2.4-2.8 3.8-1.4s.8 1.6-1.4 3.8c-1.7 1.7-3.8 1.3-3.8 1.3s-.2-2 1.4-3.7"> </path>
+                </g>
+                <path d="M18.5 38C12.3 27.6 2 31.9 2 31.9s14.7-14.7 24.6-4.8L18.5 38z" fill="#1469d9"></path>
+                <path d="M23.3 30.3l3.2-3.2C16.7 17.2 2 31.9 2 31.9s12.9-9.2 21.3-1.6" fill="#001f3f"> </path>
+                <path d="M26 45.5C36.4 51.7 32.1 62 32.1 62s14.7-14.7 4.8-24.6L26 45.5z" fill="#1469d9"> </path>
+                <path d="M33.7 40.7l3.2-3.2c9.9 9.9-4.8 24.6-4.8 24.6s9.2-13 1.6-21.4" fill="#001f3f"> </path>
+                <path d="M48.8 30.9C37.1 42.5 24.2 48.8 19.7 44.3c-4.5-4.5 1.8-17.4 13.4-29.1c13.6-13.6 28.7-13 28.7-13s.5 15.1-13 28.7" fill="#c5d0d8"> </path>
+                <path d="M45.8 27.6C34.2 39.2 22.6 46.8 19.9 44.1c-2.7-2.7 4.9-14.3 16.5-25.9C50 4.6 62 2 62 2s-2.6 12-16.2 25.6z" fill="#dae3ea"> </path>
+                <path d="M24.3 47.5c-.5.5-1.3.5-1.8 0l-6-6c-.5-.5-.5-1.4 0-1.9l1.8-1.8l7.8 7.8l-1.8 1.9" fill="#001f3f"> </path>
+                <path d="M22.6 45.7c-.5.5-1.1.7-1.4.4l-3.4-3.4c-.3-.3-.1-.9.4-1.4l1.8-1.8l4.4 4.4l-1.8 1.8" fill="#43b7ff"> </path>
+                <path d="M20.9 48.2c-.3.3-1 .3-1.3 0l-3.9-3.9c-.3-.3-.2-.9.1-1.2l1.2-1.2l5.1 5.1l-1.2 1.2" fill="#3e4347"> </path>
+                <path d="M20.1 47.4c-.3.3-.9.4-1.1.2l-2.7-2.7c-.2-.2-.1-.7.3-1l1.2-1.2l3.5 3.5l-1.2 1.2" fill="#62727a"> </path>
+                <path d="M61.8 2.2S56.4 2 49.1 4.8l10.1 10.1C62 7.6 61.8 2.2 61.8 2.2" fill="#001f3f"> </path>
+                <path d="M61.8 2.2s-4.3.9-10.8 4.6l6.2 6.2c3.7-6.5 4.6-10.8 4.6-10.8" fill="#43b7ff"> </path>
+                <circle cx="43.5" cy="20.5" r="5" fill="#edf4f9"> </circle>
+                <circle cx="43.5" cy="20.5" r="3.3" fill="#1469d9"> </circle>
+                <circle cx="33.5" cy="30.5" r="5" fill="#edf4f9"> </circle>
+                <circle cx="33.5" cy="30.5" r="3.3" fill="#1469d9"> </circle>
+                <path d="M48.9 6.9c-.3.3-.9.3-1.2 0c-.3-.3-.3-.9 0-1.2c.3-.3.9-.3 1.2 0c.3.3.3.9 0 1.2"> </path>
+                <circle cx="50.6" cy="8.6" r=".8"> </circle>
+                <circle cx="53" cy="11" r=".8"> </circle>
+                <circle cx="55.3" cy="13.4" r=".8"> </circle>
+                <circle cx="57.7" cy="15.7" r=".8"> </circle>
+              </svg>
             </div>
           </div>
 
+          <a class="cmp-main-btn cmp-main-btn--pg3-s1 cmp-main-btn--light" href="./contact.html">CONTACT US</a>
+
         </div>
       </section>
+
+      <!------------------------------------------------------------------------------------------------------------>
+      <!--------------------------------------- PAGE 3 / SECTION-TWO / MISSION ------------------------------------->
+      <!------------------------------------------------------------------------------------------------------------>
 
       <section class="pg1-s2-mission pg1-s2-mission--pg3-s2" aria-labelledby="s2-mission">
         <div class="wrapper wrapper--mobile-S">
@@ -270,12 +312,33 @@
 
           </ul>
 
-          <a class="cmp-main-btn cmp-main-btn--pg1-s2 cmp-main-btn--light" href="#">CONTACT US TODAY</a>
+          <a class="cmp-main-btn cmp-main-btn--pg1-s2 cmp-main-btn--light" href="./contact.html">CONTACT US TODAY</a>
         </div>
       </section>
 
+      <!------------------------------------------------------------------------------------------------------------>
+      <!--------------------------------------- PAGE 3 / SECTION-THREE / APPROACH ---------------------------------->
+      <!------------------------------------------------------------------------------------------------------------>
+
       <section class="pg1-s1-approach pg1-s1-approach--pg3-s3" aria-labelledby="s3-approach">
         <div class="wrapper wrapper--mobile-L">
+
+          <svg class="ufo-decorative-svg dark-mode-show" viewBox="0 0 511.996 511.996" aria-hidden="true">
+            <path style="fill:#52798F;" d="M263.998,141.006v-17.008c0-4.422-3.578-8-8-8c-4.422,0-8,3.578-8,8v17.008 c2.557-0.658,5.238-1.008,8-1.008C258.76,139.998,261.441,140.348,263.998,141.006z"></path>
+            <path style="fill:#5C546A;" d="M255.998,163.998h21.438h9.554c-2.894-11.245-11.747-20.098-22.992-22.992 c-2.557-0.658-5.238-1.008-8-1.008c-2.762,0-5.443,0.35-8,1.008c-11.245,2.894-20.098,11.747-22.992,22.992h9.554H255.998z"></path>
+            <path style="fill:#00E389;" d="M380.279,259.998l-52.125-78.187c-7.437-11.156-19.875-17.812-33.281-17.812h-1.109l31.997,96 H380.279z"></path>
+            <path style="fill:#00E389;" d="M277.748,166.529c-0.28-0.841-0.313-1.691-0.312-2.531h-21.438v96h52.904L277.748,166.529z"></path>
+            <path style="fill:#00BBBB;" d="M218.233,163.998h-1.109c-13.406,0-25.844,6.656-33.281,17.812l-52.125,78.187h54.518 L218.233,163.998z"></path>
+            <path style="fill:#00BBBB;" d="M255.998,163.998H234.56c0,0.84-0.032,1.69-0.312,2.531l-31.154,93.469h52.904V163.998z"></path>
+            <path style="fill:#00BBBB;" d="M277.748,166.529l31.154,93.469h16.859l-31.997-96h-6.774h-9.554 C277.436,164.838,277.468,165.688,277.748,166.529z"></path>
+            <path style="fill:#52798F;" d="M203.094,259.998l31.154-93.469c0.28-0.841,0.313-1.691,0.312-2.531h-9.554h-6.774l-31.998,96 H203.094z"></path>
+            <path style="fill:#5C546A;" d="M127.998,347.998c-0.695,0-1.391-0.094-2.063-0.273l-2.466-0.657l33.583,40.29 c4.57,5.492,11.297,8.641,18.438,8.641h80.508v-48H127.998z"></path>
+            <path style="fill:#52798F;" d="M383.998,347.998h-128v48h80.508c7.141,0,13.867-3.148,18.438-8.633l33.583-40.298l-2.466,0.658 C385.389,347.904,384.693,347.998,383.998,347.998z"></path>
+            <path style="fill:#E3E6E9;" d="M511.224,304.568c-0.867-1.82-22.195-44.57-111.227-44.57h-19.719h-54.518h-16.859h-52.904v16v32 h255.989c0,1.146-0.237,2.294-0.731,3.359C512.256,309.201,512.24,306.709,511.224,304.568z"></path>
+            <path style="fill:#B6B8BE;" d="M255.998,307.998v-32v-16h-52.904h-16.859h-54.518h-19.719c-89.031,0-110.359,42.75-111.227,44.57 c-1.016,2.141-1.031,4.633-0.031,6.789c-0.494-1.065-0.731-2.213-0.731-3.359H255.998z"></path>
+            <path style="fill:#888693;" d="M127.998,347.998h128v-16v-24H0.009c0,1.146,0.237,2.294,0.731,3.359 c0.992,2.156,2.898,3.758,5.195,4.367l117.534,31.343l2.466,0.657C126.608,347.904,127.303,347.998,127.998,347.998z"></path>
+            <path style="fill:#B6B8BE;" d="M255.998,307.998v24v16h128c0.695,0,1.391-0.094,2.063-0.273l2.466-0.658l117.534-31.342 c2.297-0.609,4.203-2.211,5.195-4.367c0.494-1.065,0.731-2.213,0.731-3.359H255.998z"></path>
+          </svg>
 
           <div class="pg1-s1-approach__flex">
             <div class="text-block-container">
@@ -345,10 +408,7 @@
                 </div>
                 <p class="text-block-text--pg3-s3">We are always here when you need us. You will have direct access to me, the lead developer and owner, whenever you need to reach out.</p>
               </div>
-
-              <a class="cmp-main-btn cmp-main-btn--pg1-s1 cmp-main-btn--light" href="#">CONTACT US</a>
             </div>
-
 
             <div class="owner-image-box">
               <picture>
@@ -378,16 +438,16 @@
             <div class="footer__image-text-block">
               <img src="../assets/logos/company-logo4.webp" alt="Business Logo" decoding="async" loading="lazy" height="120" width="310" aria-hidden="true">
               <p>Our philosophy is that every small business deserves a website they can be proud of. No matter your size, your online presence should be built to grow with you. We are here to help make it happen!</p>
-              <a class="cmp-main-btn-footer" href="#">Get Started Today</a>
+              <a class="cmp-main-btn-footer" href="./contact.html">Get Started Now</a>
             </div>
 
             <div class="footer__quick-links-block">
               <h3>Links</h3>
               <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Web Design</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="./about.html">Who We Are</a></li>
+                <li><a href="./services.html">What We Offer</a></li>
+                <li><a href="./pricing.html">Our Prices</a></li>
               </ul>
             </div>
 
